--- a/appsettings.json
+++ b/appsettings.json
@@ -29,5 +29,9 @@
     "Key": "bb382949f22a44aaa424f44475f3b3c4",
     "Issuer": "https://localhost:7234/",
     "Audience": "https://localhost:7234/"
-  }
+  },
+  "AllowedOrigins": [
+    "http://localhost:5000",
+    "http://localhost:5001"
+  ]
 }
